--- a/src/app/components/home/navbar/navbar.component.css
+++ b/src/app/components/home/navbar/navbar.component.css
@@ -1,188 +1,69 @@
 .menu-container {
-  position: relative;
-  display: flex;
-  align-items: center;
-  color: #eeeeee;
-  padding: 20px;
-  z-index: 1;
-  -webkit-user-select: none;
-  user-select: none;
+  padding: 15px 0; /* Add padding for better spacing */
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
+/* Style the navigation container */
 .nav-container {
-  display: flex;
-  width: 100%;
-  align-items: center;
+  display: flex; /* Make the navigation items inline */
+  justify-content: space-between; /* Space between logo and menu items */
+  align-items: center; /* Vertically center items */
+  padding: 0 20px; /* Add horizontal padding */
 }
 
 .logo {
   display: flex;
   align-items: center;
-  width: 100%;
 }
 
-.menu-logo {
-  line-height: 0;
+/* Style the logo */
+.logo img {
+  width: 35px; /* Set a max width for the logo */
+  height: auto; /* Maintain the aspect ratio */
 }
 
-.menu-logo img {
-  max-height: 40px;
-  max-width: 100px;
-  flex-shrink: 0;
-}
-
+/* Style the logo text */
 .logo-text {
-  color: #232323;
   font-family: "Avenir", sans-serif;
-  font-size: 25px;
   letter-spacing: -1px;
+  font-size: 22px; /* Adjust the font size as needed */
 }
 
-.menu-container a {
-  text-decoration: none;
-  color: #232323;
-  transition: color 0.3s ease;
-}
-
-.menu-container a:hover {
-  color: #f68817;
-}
-
-.menu-container input {
-  display: block;
-  width: 35px;
-  height: 25px;
-  margin: 0;
-  position: absolute;
-  cursor: pointer;
-  opacity: 0; /* hide this */
-  z-index: 2; /* and place it over the hamburger */
-  -webkit-touch-callout: none;
-}
-
-/* Burger menu */
-.menu-container span {
-  display: block;
-  width: 33px;
-  height: 4px;
-  margin-bottom: 5px;
-  position: relative;
-  background: #eeeeee;
-  border-radius: 3px;
-  z-index: 1;
-  transform-origin: 4px 0px;
-  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1),
-    background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
-}
-
-.menu-container span:first-child {
-  transform-origin: 0% 0%;
-}
-
-.menu-container span:nth-child(3) {
-  transform-origin: 0% 100%;
-}
-
-.menu-container input:checked ~ span {
-  opacity: 1;
-  transform: rotate(45deg) translate(3px, -1px);
-  background: #232323;
-}
-
-.menu-container input:checked ~ span:nth-child(4) {
-  opacity: 0;
-  transform: rotate(0deg) scale(0.2, 0.2);
-}
-
-.menu-container input:checked ~ span:nth-child(3) {
-  transform: rotate(-45deg) translate(-5px, 11px);
-}
-
-.menu {
-  display: flex;
-}
-
+/* Style the menu */
 .menu ul {
-  list-style: none;
+  list-style: none; /* Remove default list styles */
+  margin: 0;
+  padding: 0;
+  display: flex;
+  align-items: center;
 }
 
-.menu li {
-  padding: 10px 0;
-  font-size: 17px;
+.menu ul li {
+  display: inline-block; /* Make menu items inline */
+  margin-right: 20px; /* Add spacing between menu items */
+}
+
+/* Style the language select */
+.menu select {
+  color: #232115; /* Text color */
+  cursor: pointer; /* Add a pointer cursor on hover */
+}
+
+/* Style the links */
+.menu a {
+  text-decoration: none; /* Remove underlines from links */
+  color: #232115; /* Text color */
+  font-size: 15.5px;
   font-weight: 400;
+  cursor: pointer;
 }
 
-/* desktop styles */
-@media only screen and (min-width: 768px) {
-  .menu-container {
-    width: 100%;
-  }
-
-  .menu-container a {
-    color: #232115;
-  }
-
-  .menu-container input {
-    display: none;
-  }
-
-  /* Burger menu */
-  .menu-container span {
-    display: none;
-  }
-
-  .menu {
-    position: relative;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-  }
-
-  .menu ul {
-    display: flex;
-    padding: 0;
-  }
-
-  .menu li {
-    padding: 0 20px;
-  }
+/* Style the links on hover */
+.menu a:hover {
+  color: #db4527;
 }
 
-/* mobile styles */
-@media only screen and (max-width: 767px) {
-  .menu-container {
-    flex-direction: column;
-    align-items: flex-end;
-  }
-
-  .menu-logo {
-    position: absolute;
-    left: 0;
-    top: 50%;
-    transform: translateY(-50%);
-  }
-
-  .menu-logo img {
-    max-height: 30px;
-  }
-
-  .menu {
-    position: absolute;
-    box-sizing: border-box;
-    width: 300px;
-    right: -300px;
-    top: 0;
-    margin: -20px;
-    padding: 75px 50px 50px;
-    background: #eeeeee;
-    -webkit-font-smoothing: antialiased;
-    /* to stop flickering of text in safari */
-    transform-origin: 0% 0%;
-    transform: translateX(0%);
-    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
-  }
-
-  .menu-container input:checked ~ .menu {
-    transform: translateX(-100%);
-  }
+.divider {
+  border-left: 1px solid #ccc;
+  height: 20px;
 }
