--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,1 +1,14 @@
-<p>login works!</p>
+<app-navbar [shouldHideMenuItems]="true"></app-navbar>
+<div class="form-container">
+    <form [formGroup]="loginForm" (submit)="onSubmit()">
+        <div class="form-group">
+            <label for="username">Username</label>
+            <input type="text" id="username" name="username" formControlName="username" required>
+        </div>
+        <div class="form-group">
+            <label for="password">Password</label>
+            <input type="password" id="password" name="password" formControlName="password" required>
+        </div>
+        <button type="submit">Login</button>
+    </form>
+</div>
