Minor login/register pages changes

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -9,6 +9,7 @@
             <label for="password">Password</label>
             <input type="password" id="password" name="password" formControlName="password" required>
         </div>
+        <p>Don’t have an account? <a routerLink="/register">Register</a></p>
         <button type="submit">Login</button>
     </form>
 </div>
