--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -51,6 +51,7 @@
                 {{errorMessages.password[0].message}}
             </div>
         </div>
+        <p>Already registerd? <a routerLink="/login">Go to login</a></p>
         <button type="submit">Register</button>
     </form>
 </div>
