Changed css to scss across app

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -6,6 +6,6 @@
             <h2>{{'home-page.lbl-subtitle' | translate}}</h2>
             <button class="start-for-free">{{'lbl-start-free' | translate}}</button>
         </div>
-        <img src="../../../assets/images/home-page.avif" alt="">
+        <!-- <img src="../../../assets/images/home-page.avif" alt=""> -->
     </section>
 </div>
