--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,1 +1,45 @@
-<p>footer works!</p>
+<div class="footer-wrapper">
+    <div class="footer-container">
+        <div class="logo">
+            <img src="../../../../assets/images/icons/logo-white.svg" alt="Yoga logo">
+        </div>
+        <div class="info-wrapper">
+            <div class="info">
+                <p class="title">Join us in embracing the true essence of yoga.</p>
+                <div class="contact-us-btn">
+                    <!-- <button (click)="onBtnClick()" class="secondary">Book Now</button> -->
+                </div>
+            </div>
+            <div class="contact-wrapper">
+                <div class="links-wrapper">
+                    <div class="links">
+                        <p class="link" [routerLink]="['/']" [routerLinkActiveOptions]="{exact:true}"
+                            routerLinkActive="active">
+                            Home</p>
+                        <p class="link" [routerLink]="['/about-us']" [routerLinkActiveOptions]="{exact:true}"
+                            routerLinkActive="active">
+                            About</p>
+                        <p class="link" [routerLink]="['/contact-us']" [routerLinkActiveOptions]="{exact:true}"
+                            routerLinkActive="active">Contact</p>
+                    </div>
+                </div>
+                <div class="contact-container">
+                    <div class="contact-info">
+                        <div class="email">
+                            <img src="../../../../assets/images/icons/email.svg" alt="Email">
+                            <p><a href="mailto:oscarmikeyt@gmail.com">oscarmikeyt@gmail.com</a></p>
+                        </div>
+                        <div class="phone">
+                            <img src="../../../../assets/images/icons/phone.svg" alt="Phone">
+                            <p class="phone-num"><a href="tel:555-555-555">555-555-555</a></p>
+                        </div>
+                    </div>
+                    <div class="copyright">
+                        <p>© 2023, All Rights Reserved</p>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</div>
