--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,14 +1,11 @@
 <div class="footer-wrapper">
     <div class="footer-container">
         <div class="logo">
-            <img src="../../../../assets/images/icons/logo-white.svg" alt="Yoga logo">
+            <img src="../../../../assets/images/svg/logo-white.svg" alt="Logo">
         </div>
         <div class="info-wrapper">
             <div class="info">
                 <p class="title">Join us in embracing the true essence of yoga.</p>
-                <div class="contact-us-btn">
-                    <!-- <button (click)="onBtnClick()" class="secondary">Book Now</button> -->
-                </div>
             </div>
             <div class="contact-wrapper">
                 <div class="links-wrapper">
@@ -28,10 +25,6 @@
                         <div class="email">
                             <img src="../../../../assets/images/icons/email.svg" alt="Email">
                             <p><a href="mailto:oscarmikeyt@gmail.com">oscarmikeyt@gmail.com</a></p>
-                        </div>
-                        <div class="phone">
-                            <img src="../../../../assets/images/icons/phone.svg" alt="Phone">
-                            <p class="phone-num"><a href="tel:555-555-555">555-555-555</a></p>
                         </div>
                     </div>
                     <div class="copyright">
