--- a/src/app/components/home/navbar/navbar.component.scss
+++ b/src/app/components/home/navbar/navbar.component.scss
@@ -1,70 +1,157 @@
-.menu-container {
-  padding: 15px 0; /* Add padding for better spacing */
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-}
+@import "../../../shared/scss/colors.scss";
+@import "../../../shared/scss/mixins.scss";
 
-/* Style the navigation container */
-.nav-container {
-  display: flex; /* Make the navigation items inline */
-  justify-content: space-between; /* Space between logo and menu items */
-  align-items: center; /* Vertically center items */
-  padding: 0 20px; /* Add horizontal padding */
-}
+.header-container {
+  background: $primary-white;
 
-.logo {
-  display: flex;
-  align-items: center;
-  cursor: pointer;
-}
+  .header-wrapper {
+    @include center;
+    display: flex;
+    flex-direction: row;
+    padding: 16px 0px;
+    align-items: center;
+    align-self: stretch;
 
-/* Style the logo */
-.logo img {
-  width: 35px; /* Set a max width for the logo */
-  height: auto; /* Maintain the aspect ratio */
-}
+    @include media("<tablet") {
+      justify-content: space-between;
+      height: auto;
+      padding: 16px;
+    }
 
-/* Style the logo text */
-.logo-text {
-  font-family: "Avenir", sans-serif;
-  letter-spacing: -1px;
-  font-size: 22px; /* Adjust the font size as needed */
-}
+    .left-section {
+      display: flex;
+      gap: 40px;
+      align-items: center;
 
-/* Style the menu */
-.menu ul {
-  list-style: none; /* Remove default list styles */
-  margin: 0;
-  padding: 0;
-  display: flex;
-  align-items: center;
-}
+      @include media(">=tablet") {
+        padding-left: 24px;
+      }
 
-.menu ul li {
-  display: inline-block; /* Make menu items inline */
-  margin-right: 20px; /* Add spacing between menu items */
-}
+      @include media(">=desktop") {
+        padding-left: 64px;
+      }
 
-/* Style the language select */
-.menu select {
-  color: #232115; /* Text color */
-  cursor: pointer; /* Add a pointer cursor on hover */
-}
+      .logo {
+        width: 130px;
+        height: 48px;
 
-/* Style the links */
-.menu a {
-  text-decoration: none; /* Remove underlines from links */
-  color: #232115; /* Text color */
-  font-size: 15.5px;
-  font-weight: 400;
-  cursor: pointer;
-}
+        @include media(">=tablet") {
+          height: 55px;
+        }
+      }
+    }
 
-/* Style the links on hover */
-.menu a:hover {
-  color: #db4527;
-}
+    .right-section {
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
+      gap: 32px;
 
-.divider {
-  border-left: 1px solid #ccc;
-  height: 20px;
+      .menu-item {
+        cursor: pointer;
+
+        @media (max-width: 768px) {
+          display: none;
+        }
+      }
+    }
+    .menu-icon {
+      @media (min-width: 768px) {
+        display: none;
+      }
+    }
+  }
+  .menu {
+    display: flex;
+    flex-direction: row;
+    gap: 32px;
+
+    @media (max-width: 767px) {
+      display: none;
+    }
+
+    .separator {
+      border-left: 1px solid #ccc;
+      height: 25px;
+    }
+
+    .menu-item {
+      cursor: pointer;
+      font-size: 16px;
+      font-style: normal;
+      font-weight: 500;
+      line-height: 24px;
+      color: $secondary-black;
+
+      &.active {
+        //color: $primary-blue;
+      }
+
+      &:last-child {
+        margin-right: 0;
+      }
+    }
+  }
+
+  .mobile-menu {
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.4);
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    top: 0;
+    right: 0;
+    left: 0;
+    backdrop-filter: blur(5px);
+    z-index: 100;
+
+    .close-container {
+      max-width: 100%;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+      flex-wrap: wrap;
+      padding: 16px;
+      background-color: $primary-white;
+
+      img {
+        &.logo {
+          width: 130px;
+          height: 48px;
+        }
+
+        &.icon {
+          width: 40px;
+          height: 40px;
+        }
+      }
+    }
+
+    .options-container {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: flex-end;
+      gap: 16px;
+      padding: 16px;
+      background-color: $primary-white;
+
+      a {
+        padding: 8px;
+        color: $secondary-black;
+        text-align: right;
+        font-size: 18px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 24px;
+        text-decoration: none;
+
+        &.active {
+          //color: $primary-blue;
+        }
+      }
+    }
+  }
 }
