--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,12 @@
+@font-face {
+  font-family: "PublicSans";
+  src: url("./assets/fonts/PublicSans-Regular.ttf") format("truetype");
+}
+
 * {
+  font-family: "PublicSans", Arial, sans-serif;
   box-sizing: border-box;
-  margin: 0;
   padding: 0;
+  margin: 0;
+  overflow-x: hidden;
 }
