--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -2,7 +2,8 @@
 @import "../../scss/mixins.scss";
 
 .footer-wrapper {
-  background: $secondary-black;
+  background: linear-gradient(to top, $secondary-black, #42535f);
+
   .footer-container {
     padding: 48px 16px;
     max-width: 1280px;
