Created redesigned version of login/register pages

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -3,14 +3,7 @@
     <div class="contact-form-section">
         <div class="content">
             <p class="title">Log in</p>
-            <p class="supporting-text">For any inquiries or assistance, please don't hesitate to get in touch with us.
-                <br><br>
-
-                Our team at S & S Veterans Services is here to provide veterans struggling with alcohol and drug abuse,
-                mental illness, and financial planning with the compassionate help they need. <br><br>
-
-                Your path to recovery and stability starts with a simple message or call. We're here to support you
-                every step of the way.
+            <p class="supporting-text">Please log in to continue using our app.
             </p>
         </div>
         <div class="form-wrapper">
