--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -14,14 +14,13 @@
   .contact-form-section {
     @include center;
     @include display-flex;
-    flex-direction: row;
+    flex-direction: column;
     gap: 32px;
     padding: 96px 64px;
 
     @include media("<desktop") {
       padding: 96px 24px;
       gap: 64px;
-      flex-direction: column;
     }
 
     @include media("<tablet") {
@@ -32,7 +31,6 @@
     .content {
       display: flex;
       flex-direction: column;
-      flex: 50%;
 
       @include media(">=desktop") {
         padding-bottom: 0px;
@@ -75,7 +73,10 @@
       border-radius: 16px;
       height: 100%;
       width: 100%;
-      flex: 50%;
+
+      @include media(">=tablet") {
+        width: 50%;
+      }
 
       .form {
         padding: 24px;
