--- a/src/app/components/register/register.component.scss
+++ b/src/app/components/register/register.component.scss
@@ -14,14 +14,13 @@
   .contact-form-section {
     @include center;
     @include display-flex;
-    flex-direction: row;
+    flex-direction: column;
     gap: 32px;
     padding: 96px 64px;
 
     @include media("<desktop") {
       padding: 96px 24px;
       gap: 64px;
-      flex-direction: column;
     }
 
     @include media("<tablet") {
@@ -32,7 +31,6 @@
     .content {
       display: flex;
       flex-direction: column;
-      flex: 50%;
 
       @include media(">=desktop") {
         padding-bottom: 0px;
@@ -56,18 +54,6 @@
             letter-spacing: -0.96px;
           }
         }
-
-        &.supporting-text {
-          font-size: 18px;
-          font-style: normal;
-          font-weight: 400;
-          line-height: 24px;
-
-          @include media(">=desktop") {
-            font-size: 24px;
-            line-height: 32px;
-          }
-        }
       }
     }
 
@@ -75,7 +61,10 @@
       border-radius: 16px;
       height: 100%;
       width: 100%;
-      flex: 50%;
+
+      @include media(">=tablet") {
+        width: 50%;
+      }
 
       .form {
         padding: 24px;
@@ -122,6 +111,11 @@
 
             &.mr-24 {
               margin-right: 24px;
+
+              .form-error {
+                color: $primary-red;
+                font-size: 14px;
+              }
             }
           }
         }
