--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,2 +1,11 @@
-<p>dashboard works!</p>
-<button (click)="logout()">Logout</button>
+<div class="container">
+    <div class="wrapper">
+        <div class="sidebar">
+            <app-sidebar></app-sidebar>
+        </div>
+        <div class="content">
+            <p>dashboard works!</p>
+            <button (click)="logout()">Logout</button>
+        </div>
+    </div>
+</div>
