--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -4,8 +4,8 @@
             <app-sidebar></app-sidebar>
         </div>
         <div class="content">
-            <p>dashboard works!</p>
             <button (click)="logout()">Logout</button>
         </div>
+        <router-outlet></router-outlet>
     </div>
 </div>
