Handled new routes for dashboard

--- a/src/app/components/dashboard/sidebar/sidebar.component.html
+++ b/src/app/components/dashboard/sidebar/sidebar.component.html
@@ -7,8 +7,8 @@
             </div>
         </div>
         <div class="add-task">Add Task</div>
-        <div class="plans">Today</div>
-        <div class="plans">Upcoming</div>
+        <div class="plans"><a routerLink="./today">Today</a></div>
+        <div class="plans"><a routerLink="./upcoming">Upcoming</a></div>
     </div>
     <div class="toggle-section">
         <span (click)="toggleCollapse()"><i class="fa-solid fa-minimize"></i></span>
