--- a/src/app/components/dashboard/sidebar/sidebar.component.scss
+++ b/src/app/components/dashboard/sidebar/sidebar.component.scss
@@ -22,9 +22,11 @@
     display: flex;
     flex-direction: column;
     .users-section {
-      display: flex;
-      flex-direction: row;
-      justify-content: space-between;
+      .user {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+      }
     }
   }
 
